# rust-mqtt-chat

./: Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.github/workflows/: ci.yml
src/: app.rs  events_handler.rs  lib.rs  main.rs  network.rs  queue.rs  renderer.rs  terminal_driver.rs  ui.rs
src/app/: network_events_handler.rs  terminal_events_handler.rs
src/chat/: chat_msg.rs  chat_room.rs  mod.rs
src/chat_room/: mod.rs  queue_chat_room.rs
src/crypt/: magic_crypt.rs  mod.rs
src/crypto/: magic_crypt.rs  mod.rs
src/events_handler/: crossterm_events_handler.rs
src/events_publisher/: mod.rs  mqtt.rs
src/events_reader/: mod.rs  mqtt.rs  terminal.rs
src/network/: consumer.rs  network_backend.rs  publisher.rs
src/network/network_backend/: mqtt_backend.rs
src/queue/: consumer.rs  encrypted_queue.rs  mod.rs  mqtt.rs  network_backend.rs  publisher.rs  queue_backend.rs
src/queue/network_backend/: mqtt_backend.rs
src/renderer/: terminal_renderer.rs  ui.rs
src/tui/: terminal_driver.rs
src/tui/components/: input_panel.rs  main_view.rs  messages_panel.rs  mod.rs
src/ui/: mod.rs  terminal_ui.rs
src/ui/components/: help_msg.rs  input_panel.rs  messages_panel.rs  mod.rs
