[package]
name = "actor-model-chat"
version = "0.1.0"
authors = ["damszew <damian.szewczyk111@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tui = { version = "0.14.0", default-features = false, features = ["crossterm"] }
anyhow = "1"
crossterm = { version = "0.19", default-features = false, features = ["event-stream"] }
async-trait = "0.1.48"
futures = "0.3.14"
chrono = "0.4.19"

[dev-dependencies]
mockall = "0.9.1"
tokio-stream = "0.1.5"
test-case = "1.1.0"
